debug HTML, CSS, and JS files

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
     <div class="arrows next"></div>
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-<script src="js/jquery-slider.js"></script>
+<script src="js/simple-slider.js"></script>
 <script>
   SimpleSlider.init({
-    containerSelector: "#wrapper",
-    slideDuration: 500,
-    auto: false
+    containerSelector: "#wrapper", //default: #simplerSlider
+    //slideDuration: 500,
+    auto: false //default: true
   });
 </script>
 </html>
