fix misspellings from slide to slides. Change colons to commas.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   SimpleSlider.init({
     containerSelector: "#wrapper", //default: #simplerSlider
     //slideDuration: 500,
-    auto: false //default: true
+    //auto: false //default: true
   });
 </script>
 </html>
