Add assets folder. Move css and js files to assets. Change src and href attributes in index.html

--- a/index.html
+++ b/index.html
@@ -3,17 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/normalize.css">
-
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/normalize.css">
     <title>Skillcrush Slider</title>
 </head>
 <body>
     <div class="arrows prev"></div>
 
     <div class="wrapper" id="wrapper">
-
       <p>I GOT A JOB!!!! My interviewer was super impressed by the skills I took the initiative to learn on my own. I was able to "talk the talk," so to speak, which was great! I feel confident going into my new role in just 2 weeks!
       </p>
 
@@ -32,7 +29,7 @@
     <div class="arrows next"></div>
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-<script src="js/simple-slider.js"></script>
+<script src="assets/js/simple-slider.js"></script>
 <script>
   SimpleSlider.init({
     containerSelector: "#wrapper", //default: #simplerSlider
