Update README file. Add comments to index.html

--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Skillcrush Slider</title>
+    
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/normalize.css">
-    <title>Skillcrush Slider</title>
 </head>
 <body>
     <div class="arrows prev"></div>
 
     <div class="wrapper" id="wrapper">
-      <p>I GOT A JOB!!!! My interviewer was super impressed by the skills I took the initiative to learn on my own. I was able to "talk the talk," so to speak, which was great! I feel confident going into my new role in just 2 weeks!
-      </p>
+      <p>I GOT A JOB!!!! My interviewer was super impressed by the skills I took the initiative to learn on my own. I was able to "talk the talk," so to speak, which was great! I feel confident going into my new role in just 2 weeks!</p>
 
       <p>My life has completely changed! All of my friends and family are so impressed, and it has brought a certain kind of confidence in my abilities not only as a "techie" but as a mom, and person in general that I could switch careers and understand and
-        DO it. </p>
+        DO it.</p>
 
       <p>This quote is also inspirational!!!! Super inspirational! Because everything is awesome!</p>
 
@@ -28,7 +29,11 @@
 
     <div class="arrows next"></div>
 </body>
+
+<!-- jQuery -->
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+
+<!-- Simple Slider-->
 <script src="assets/js/simple-slider.js"></script>
 <script>
   SimpleSlider.init({
